--- a/index.html
+++ b/index.html
@@ -9,22 +9,29 @@
   <title>Tic Tac Toe</title>
 </head>
 <body>
-  <div class="game-board">
-    <div class="box">X</div>
-    <div class="box">O</div>
-    <div class="box">O</div>
-    <div class="box">O</div>
-    <div class="box">X</div>
-    <div class="box">O</div>
-    <div class="box">O</div>
-    <div class="box">X</div>
-    <div class="box">X</div>
-  </div>
+  <div class="ctr">
+    <div class="game-board">
+      <div class="box">X</div>
+      <div class="box">O</div>
+      <div class="box">O</div>
+      <div class="box">O</div>
+      <div class="box">X</div>
+      <div class="box">O</div>
+      <div class="box">O</div>
+      <div class="box">X</div>
+      <div class="box">X</div>
+    </div>
+  
+    <div class="p-turn-ctr">
+      <h2 class="p-turn">Player Turn: Blue</h2>
+    </div>
 
-  <div class="reset-btn-ctr">
-    <button class="reset-btn">
-      RESET
-    </button>
+
+    <div class="reset-btn-ctr">
+      <button class="reset-btn">
+        RESET
+      </button>
+    </div>
+  </body>
   </div>
-</body>
 </html>
