--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles.css">
-  <script src="./script.js" defer></script>
+  <script src="./script3.js" defer></script>
   <title>Tic Tac Toe</title>
 </head>
 <body>
   <div class="ctr">
-    <div class="game-board">
-      <div class="box">X</div>
-      <div class="box">O</div>
-      <div class="box">O</div>
-      <div class="box">O</div>
-      <div class="box">X</div>
-      <div class="box">O</div>
-      <div class="box">O</div>
-      <div class="box">X</div>
-      <div class="box">X</div>
+    <div class="board">
+      <div class="box" data-cell="0" ></div>
+      <div class="box" data-cell="1"></div>
+      <div class="box" data-cell="2"></div>
+      <div class="box" data-cell="3"></div>
+      <div class="box" data-cell="4"></div>
+      <div class="box" data-cell="5"></div>
+      <div class="box" data-cell="6"></div>
+      <div class="box" data-cell="7"></div>
+      <div class="box" data-cell="8"></div>
     </div>
   
-    <div class="p-turn-ctr">
-      <h2 class="p-turn">Player Turn: Blue</h2>
+    <div class="current-mark-ctr">
+      <h2 class="current-mark"></h2>
     </div>
 
 
