--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <div class="box" data-cell="8"></div>
     </div>
   
-    <div class="current-mark-ctr">
-      <h2 class="current-mark"></h2>
+    <div class="msg-ctr">
+      <h2 class="msg"></h2>
     </div>
 
 
